T11: make the build compile & test on JDK 17
Final toolchain step of the coordinated jump (JDK 17 + Scala 2.13.12 + Spark 3.4.4).
The whole codebase compiles and the entire test suite passes on JDK 17.0.12.

- jdk17ModuleOpts: Spark 3.4's full JDK-17 --add-opens set added to both builds'
  CommonSettingsPlugin Test/IntegTest javaOptions, plus the per-module overrides
  that replace them (backendcommons, WE commons) and the WE deeplang testGrouping
  and workflowexecutor forks. Spark reflects into JDK internals which the module
  system blocks by default (InaccessibleObjectException). Needed
  sun.security.ssl on top of Spark's default set for the workflowmanager HTTPS
  download tests.
- GatewayServerFactory: the py4j GatewayServer was built by reflectively setting
  its private final fields, stripping `final` via the Field.modifiers hack that
  the JDK removed in 12+ (NoSuchFieldException: modifiers), which broke the
  PythonGateway tests. Replaced with py4j 0.10.9.7's full GatewayServer
  constructor -- no reflection, and correct on JDK 8/11/17.
- Root javacOptions -source/-target 1.7 -> 1.8 (source 7 is obsolete on JDK 17,
  removed in JDK 20+).

Verified on JDK 17.0.12 / Scala 2.13.12 / Spark 3.4.4: full suite green --
WE reportlib 25, graph 50, workflowjson 31, deeplang 345, workflowexecutor 88;
backend backendcommons 31, workflowmanager REST 60, sessionmanager 38,
datasourcemanager 8, schedulingmanager 3.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>